fixed responsive spacing

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -215,14 +215,32 @@
     }
     .itemTitle {
         line-height: normal;
-        margin-bottom: 10px;
+        margin-bottom: 14px;
+        font-size: 20px;
     }
     .itemImg {
-        height: 160px;
-        width: 160px;
+        height: 200px;
+        width: 200px;
         margin-right: 30px;
     }
+    .portfolio {
+        margin-top: 100px;
+    }
     .portfolioItems {
-        margin-top: 30px;
+        margin-top: 40px;
+    }
+    .portfolioItem {
+        margin-bottom: 40px;
+        height: 200px
+    }
+    .caseButton {
+        width: 140px;
+        height: 50px;
+        font-size: 12px;
+        padding: 0px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
